<resources>
    <string name="app_name">My Compilation</string>
    <string name="app_title">EMPLOYEE PAYROLL COMPUTATION</string>

    <string name="employee_id">Employee ID:</string>
    <string name="employee_name">Employee Name:</string>
    <string name="position_code">Position Code:</string>
    <string name="civil_status">Civil Status:</string>
    <string name="days_worked">No. of Days Worked:</string>

    <string name="name">Papsi</string>

    <string name="radioBtnSingle">Single</string>
    <string name="radioBtnMarried">Married</string>
    <string name="radioBtnWidowed">Widowed</string>

    <string name="btnCompute">Compute</string>
    <string name="btnClear">Clear</string>

    <string name="mp2">Machine Problem 2</string>
    <string name="mp4">Machine Problem 4</string>
    <string name="mp5">Machine Problem 5</string>
    <string name="mp6">Machine Problem 6</string>

    <string name="g1">Guided Activity 1</string>
    <string name="g2">Guided Activity 2</string>
    <string name="g3">Guided Activity 3</string>
    <string name="g4">Guided Activity 4</string>
    <string name="g5">Guided Activity 5</string>
    <string name="g6">Guided Activity 6</string>
    <string name="g7">Guided Activity 7</string>
    <string name="g8">Guided Activity 8</string>
    <string name="g9">Guided Activity 9</string>
    <string name="g10">Guided Activity 10</string>
    <string name="g11">Guided Activity 11</string>

    <string name="g12">Image View and App Icon</string>
    <string name="g13">Adding Images on Drawable</string>
    <string name="g14">SQLite</string>
</resources>